add_executable(main main.cpp Vector.h)
add_executable(list_main list_main.cpp List.h)
add_executable(balancing_symbols balancing_symbols.cpp Vector.h)
add_executable(ex3_1 ex3_1.cpp)
add_executable(ex3_3 ex3_3.cpp)
add_executable(ex3_22 ex3_22.cpp)
add_executable(sstream_exp sstream_exp.cpp)
add_executable(eof eof.cpp)
add_executable(ex3_23 ex3_23.cpp)